[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "chord-chart"
requires-python = ">=3.7"
description = "Chord chart validation and transposition"
readme = "README.md"
authors = [{ name = "Lev Vereshchagin", email = "mail@vrslev.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest==7.2.0", "pyright==1.1.280"]

[project.urls]
Homepage = 'https://github.com/vrslev/chord-chart'
Source = 'https://github.com/vrslev/chord-chart/tree/main/chord-chart-py'

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]
