[package]
name = "chord-chart-ts"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
chord-chart = { path = "../chord-chart" }
wasm-bindgen = "0.2.74"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
lto = true
opt-level = "s"
