[package]
name = "chord-chart-ts"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
chord-chart = { path = "../chord-chart" }
wasm-bindgen = "0.2.74"
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
lto = true
opt-level = "s"
